2012-12-05  Sancho Lerena <slerena@artica.es>

	*  include/javascript/pandora.js: Added new javascript function
	to open a generic URL with custom width / height.

	* operation/agentes/snapshot_view.php: New feature for command
	snapshot rendering.

	* operation/agentes/datos_agente.php,
	operation/agentes/estado_monitores.php: Changes for new feature
	command snapshot monitoring.

2012-12-05  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	operation/agentes/stat_win.php: Add compare mode (separated and
	overlapped) merged from trunk

2012-12-03  Hirofumi Kosaka  <kosaka@rworks.jp>

        * include/functions_html.php: Use "autocomplete=off" in all
	password fields (this is re-apply of rev5823, that was
	dropped at rev6607).

2012-11-27  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_delete_modules.php: Fixed a bug 
	on massive delete modules due of a copypaste MERGED FROM TRUNK

2012-11-21 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_api.php: Fixed an SQL which collects all agents
	which looks for url_address that is not available on 4.0.2 

2012-11-21 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/integria_incidents/incident.php: Fixed an error in
	Integria <-> Pandora integration for incident management.

2012-11-20 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager.php,
	extensions/update_manager/debug.php,
	extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/libupdate_manager_components.php,
	extensions/update_manager/lib/libupdate_manager_updates.php,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/lib/libupdate_manager.php: fixed the
	execution of keygen when there is some wrong in the execution the
	message for user is more clean now show "Error in execution the
	keygen." instead the message "Error Server authorisation rejected".
	And added other forms to get debugData for the update.
	